# qsim

./: .gitignore  ADDENDUM_20260424_evening.md  CLAUDE_HANDOFF.md  LICENSE  PHASE_INTEGRATION_RESULTS.md  README.md  SPEC.md  TODO.md  TODO_SESSION_20260424.md  cycle.py  db.py  demo.py  handoff_check.py  hexagon.py  install.sh  ipq.py  phase_integration.py  phase_sequence.py  planets.py  pyproject.toml  q3sh_research_phaseQ.md  q_correlations.py  qsim_bridge.html  qsim_bridge.md  quantum.py  requirements-optional.txt  requirements.txt  schumann.py  sovereignty.py
docs/: digit_tests_0_9_Q.md
tests/: test_digits_0_9_Q.py
